# ems

./: .gitignore  CMakeLists.txt  LICENSE  README.md
api/my-first-golang/: go.mod  main.go
cs/: CMakeLists.txt  package.json.in  vite.config.js
cs/src/assets/styles/: srl.scss
cs/src/pages/showcase/: index.html  main.js  table-data.js
cs/src/srl/core/: app.js  component.js  element.js  notification.js  state.js  util.js
my-first-golang/single/: go.mod
my-first-golang/todo/: go.mod  go.sum  main.go
my-first-golang/todo/adapter/controller/: todo.go
my-first-golang/todo/adapter/gateway/: todo_repository.go
my-first-golang/todo/adapter/presenter/: error.go  message.go  todo.go
my-first-golang/todo/driver/persistent/: functional.go
my-first-golang/todo/driver/web/: todo_router.go
my-first-golang/todo/entity/model/: status.go  todo.go
my-first-golang/todo/entity/repository/: todo.go
my-first-golang/todo/usecase/interactor/: todo.go
my-first-golang/todo/usecase/port/: todo.go  todo_dto.go
scripts/: rungo
ss/: go.mod
ss/adapter/controller/: context.go  hello.go  helth.go  login.go  manage.go
ss/adapter/gateway/: session_data_repository.go
ss/adapter/presenter/: global.go  hello.go  login.go  meessage.go
ss/cmd/manage/: main.go
ss/driver/persistent/: session_data.go
ss/driver/web/: router.go
ss/driver/web/handler/: hello.go  helth.go  login.go  manage.go
ss/entity/model/: auth.go  permission.go  session_data.go
ss/entity/repository/: session_data.go
ss/internal/crypt/rsa_oaep/: rsa_oaep.go
ss/pkg/b64/: b64.go
ss/pkg/storage/kv/: kv_storage.go  memory_storage.go  (+1 more)
ss/registry/: controller.go  handler.go  interactor.go  presenter.go  repository.go
ss/usecase/interactor/: hello.go  login.go
ss/usecase/port/: global_dto.go  hello.go  hello_dto.go  login.go  login_dto.go
trial-env/: compose.yaml
trial-env/backend/: Dockerfile
trial-env/db/: Dockerfile
trial-env/frontend/: Dockerfile
trial-env/initdb/: 30_init.sql
(+24 files in other folders)
